--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.2.3"
+    "@astrojs/react": "^1.1.2",
+    "astro": "^1.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
